2097 [Bitrate Calculator] improved M2TS calculation assumption. Warning: it is better but also not correct
2096 [Update] changed recommended path for neroaacenc to tools\eac3to
2095 [Log] changed resource lock behavior. Bug #3466426
2094 [MP4 Muxer] use ISO 639-2/T language codes when muxing. Bug #3201829
2093 [Update] if a component is missing a warning message will appear at startup
2092 [MainForm] offer to install AviSynth if AviSynth is not found but the installer is availabe (x86 only)
2091 [Settings] changed default value of "Autostart Queue" to enabled
2090 [Audio Encoder] do not abort downmix anymore if input avs file has no channel position information
2089 [HD Streams Extractor] defaulting to English if the track language can not be indentified (MKV only)
2088 [Audio Encoder] cosmetics
2087 [FFMS] remove AssumeFPS() as it is causing problems with hybrid/telecined input. Bug #3463347
2086 [AVS Script Creator] improve input DAR detection when using AVS input files
2085 [OneClick] fixed long delay during processing when adding more than 4 tracks (part III)
2084 [AVS Script Creator] resize value will only be added to the script if necessary
                          fixed button checked states after loading avisynth profiles
2083 [OneClick] fixed long delay during processing when adding more than 4 tracks (part II)
2082 [Audio Encoder] DTS-MA decoding is blocked with NicAudio to avoid problems
2081 [OneClick] fixed long delay during processing when adding more than 4 tracks
2080 [AVS] if an AVS script cannot be opened the old method to open such files is used during the session. 
           the option can be completly disabled in the settings ("Improved AVS opening", enabled by default). Bug #3437874
2079 [MKV Demuxer] adjusted demuxer to the recent mkvextract changes (requires mkvmerge revision 5.2.1+)
2078 [Progress Window] changed priority will be kept during the whole application session. Feature request #3445179